# taurus

./: .gitignore  Cargo.toml  README.md  install.sh  lupus.toml  todo  transfer.sh
.github/workflows/: rust.yml
js/: client.js  frontend.js  package-lock.json  server.js
src/: args.rs  backup.rs  bridge.rs  config.rs  events.rs  lib.rs  main.rs  newbackup.rs  utils.rs  ws.rs
temp/: config.toml  run.sh
temp/servers/: smp.toml
