[package]
name = "lupus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1.6"
futures = { version = "0.3", default-features=false }
uuid = { version = "0.8.2", features = ["v4"] }
serde = "1.0.117"
serde_derive = "1.0.117"
libc = "*"
regex = "1.5.4"
rcon = "0"
toml = "0.5.3"

#https://docs.rs/evalexpr/latest/evalexpr/index.html
